# rgbman

./: Cargo.toml  README.md
src/: auda0_e6k5_0101_dram.rs  gigabyte_rgb_fusion2_usb.rs  index.html  main.rs
