[package]
name = "rgbman"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.42"
hyper = { version = "1.7", features = ["full"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-journald = "0.3.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
hidapi = "2.6.3"
i2c-linux = "0.1.2"
hyper-util = { version = "0.1.17", features = ["full"] }
http-body-util = "0.1.3"
